add feature folder and types folder for typescript and add some styled

--- a/apps/hotel-management/index.html
+++ b/apps/hotel-management/index.html
@@ -14,12 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Sono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <title>Vite + React + TS</title>
+
+    <title>Rezervino</title>
   </head>
   <body>
     <div id="root"></div>
