Fix: title For panel admin

--- a/apps/hotel-management/index.html
+++ b/apps/hotel-management/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <title>Rezervino</title>
+    <title>Panel Admin | Rezervino</title>
   </head>
   <body>
     <div id="root"></div>
